# O-scope-Lock-In-Amplifier

./: .gitignore  Jenkinsfile  pyproject.toml  readme.md  setup.cfg  tasks.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
o_scope_lock_in_amplifier/: __init__.py  __main__.py  cli.py  ds1054z.py  gui.py  lock_in_proc.py  oscilloscope_utils.py  plot_widget.py  ps6000e.py  setup_panel.py
o_scope_lock_in_amplifier-0.1.dev1+g741d6e8.d20240928/: plot_widget.py  setup_panel.py
tests/: __init__.py  test_wheel.py
