[build-system]
requires = ["setuptools~=75.1.0", "setuptools-scm~=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "o_scope_lock_in_amplifier"
authors = [{name = "Marcus Engineering, LLC"}]
description = "Turn your oscilloscope into a lock in amplifier with this one simple trick!."
readme = "readme.md"
dynamic = ["version"]
requires-python = ">=3.10.0"
dependencies = [
	"pyvisa~=1.14.1",
	"types-tqdm~=4.66.0.20240417",
	"pyside6~=6.7.3",
    "numpy~=2.1.1",
    "matplotlib~=3.9.2",
    "tqdm~=4.66.5"
]

[project.optional-dependencies]
dev = [
	"black~=24.8.0",
	"build~=1.2.2",
	"flake8~=7.1.1",
	"flake8-docstrings~=1.7.0",
	"flake8-isort~=6.1.1",
	"flake8-noqa~=1.4.0",
	"isort~=5.13.2",
	"mypy~=1.11.2",
	"mypy-extensions~=1.0.0",
	"pep8-naming~=0.14.1",
	"pydocstyle~=6.3.0",
	"pytest~=8.3.3",
	"setuptools~=75.1.0",
	"setuptools_scm~=8.1.0",
	"sphinx~=8.0.2",
	"types-setuptools~=75.1.0.20240917",
	"typing-extensions~=4.12.2",
	"wheel~=0.44.0",
	"tox~=4.20.0",
    "PySide6-stubs~=6.4.2.0",
    "scipy-stubs~=1.4.1a3"
]

[project.scripts]
o_scope_lock_in_amplifier = "o_scope_lock_in_amplifier.cli:main"

[tool.setuptools]
packages = [
	"o_scope_lock_in_amplifier",
]

[tool.setuptools.package-data]
o_scope_lock_in_amplifier = [
	"py.typed",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib",
]
